--- a/projects/stage-0/user-platform/pom.xml
+++ b/projects/stage-0/user-platform/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.geekbang.projects</groupId>
+    <groupId>com.jizhi.geektime</groupId>
     <artifactId>user-platform</artifactId>
-    <name>User Platform ${revision}</name>
+    <name>user-platform</name>
     <version>${revision}</version>
     <packaging>pom</packaging>
 
@@ -25,22 +25,26 @@
         <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
         <jstl.version>1.2</jstl.version>
         <commons-lang.version>2.6</commons-lang.version>
-        <derby.version>10.1.3.1</derby.version>
+        <commons-io.version>2.6</commons-io.version>
+        <derby.version>10.13.1.1</derby.version>
+        <fastjson.version>1.2.55</fastjson.version>
+
+        <cglib.version>2.2.2</cglib.version>
+        <hibernate-validator.version>5.3.6.Final</hibernate-validator.version>
+        <javax.el.version>3.0.0</javax.el.version>
 
         <!-- Maven Plugins 版本 -->
         <maven.compiler.version>3.8.1</maven.compiler.version>
-        <maven.source.version>3.2.1</maven.source.version>
+        <maven.source.version>3.0.1</maven.source.version>
         <maven.jar.version>3.2.0</maven.jar.version>
-        <maven.war.version>3.3.1</maven.war.version>
+        <maven.war.version>3.2.2</maven.war.version>
         <maven.deploy.version>2.8.2</maven.deploy.version>
-        <maven.flatten.version>1.2.5</maven.flatten.version>
+        <maven.flatten.version>1.2.2</maven.flatten.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-    <!-- Artifacts 依赖版本管理 -->
     <dependencyManagement>
-
         <dependencies>
             <!-- Servlet 3.1 API -->
             <dependency>
@@ -70,14 +74,44 @@
             </dependency>
 
             <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.apache.derby</groupId>
                 <artifactId>derby</artifactId>
                 <version>${derby.version}</version>
             </dependency>
 
-        </dependencies>
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib</artifactId>
+                <version>${cglib.version}</version>
+            </dependency>
 
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>${hibernate-validator.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.glassfish</groupId>
+                <artifactId>javax.el</artifactId>
+                <version>${javax.el.version}</version>
+            </dependency>
+        </dependencies>
     </dependencyManagement>
+
+
     <build>
         <pluginManagement>
             <plugins>
@@ -115,8 +149,8 @@
 
                 <plugin>
                     <groupId>org.apache.tomcat.maven</groupId>
-                    <artifactId>tomcat8-maven-plugin</artifactId>
-                    <version>3.0-r1756463</version>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>2.2</version>
                     <executions>
                         <execution>
                             <id>tomcat-run</id>
@@ -152,7 +186,7 @@
                 </configuration>
             </plugin>
 
-            <plugin>
+            <!--<plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
                 <version>${maven.flatten.version}</version>
@@ -176,7 +210,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
