--- a/projects/stage-0/user-platform/user-web/src/main/webapp/WEB-INF/web.xml
+++ b/projects/stage-0/user-platform/user-web/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,18 @@
          metadata-complete="true" version="2.5">
 
     <listener>
-        <listener-class>org.geektimes.projects.user.web.listener.DBConnectionInitializerListener</listener-class>
+        <listener-class>org.geektimes.projects.user.web.listener.ComponentContextInitializerListener</listener-class>
     </listener>
+    <servlet>
+        <servlet-name>jolokia-agent</servlet-name>
+        <servlet-class>org.jolokia.http.AgentServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>jolokia-agent</servlet-name>
+        <url-pattern>/jolokia/*</url-pattern>
+    </servlet-mapping>
     <servlet>
         <servlet-name>default</servlet-name>
         <servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class>
