--- a/projects/stage-0/user-platform/pom.xml
+++ b/projects/stage-0/user-platform/pom.xml
@@ -33,6 +33,10 @@
         <hibernate-validator.version>5.3.6.Final</hibernate-validator.version>
         <javax.el.version>3.0.0</javax.el.version>
 
+        <!-- MicroProfile 版本-->
+        <microprofile-config-api.version>2.0</microprofile-config-api.version>
+
+
         <!-- Maven Plugins 版本 -->
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.source.version>3.0.1</maven.source.version>
@@ -108,6 +112,14 @@
                 <artifactId>javax.el</artifactId>
                 <version>${javax.el.version}</version>
             </dependency>
+
+            <!-- MicroProfile -->
+            <dependency>
+                <groupId>org.eclipse.microprofile.config</groupId>
+                <artifactId>microprofile-config-api</artifactId>
+                <version>${microprofile-config-api.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
