--- a/projects/stage-0/user-platform/user-web/pom.xml
+++ b/projects/stage-0/user-platform/user-web/pom.xml
@@ -14,6 +14,8 @@
     <name>user-web</name>
     <packaging>war</packaging>
 
+    《
+
     <dependencies>
         <dependency>
             <groupId>com.jizhi.geektime</groupId>
@@ -87,16 +89,27 @@
             <artifactId>jolokia-client-java</artifactId>
             <version>1.3.7</version>
         </dependency>
-</dependencies>
 
-<build>
-    <resources>
-        <resource>
-            <directory>src/main/resuorce</directory>
-        </resource>
-    </resources>
-    <plugins>
-        <!-- Tomcat Maven 插件用于构建可执行 war -->
+        <dependency>
+            <groupId>org.eclipse.microprofile.config</groupId>
+            <artifactId>microprofile-config-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resuorce</directory>
+            </resource>
+        </resources>
+        <plugins>
+            <!-- Tomcat Maven 插件用于构建可执行 war -->
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
